# various_tutorials

./: Intro.py  README.md  fluent_python_notes.ipynb
Fluent Python Notes/: fluent_python_notes.ipynb  fluent_python_notes2.ipynb
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/beginner_tutorials/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/.private/beginner_tutorials/lib/pkgconfig/: beginner_tutorials.pc
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
catkin_ws/devel/.private/motion_tutorial/: .catkin  local_setup.sh
catkin_ws/devel/.private/ros_essentials_cpp/: .catkin  setup.sh
catkin_ws/devel/.private/ros_service_assignment/: .catkin  .rosinstall
catkin_ws/devel/include/ros_essentials_cpp/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  FibonacciAction.h  FibonacciActionFeedback.h  FibonacciActionGoal.h  FibonacciActionResult.h  FibonacciFeedback.h  FibonacciGoal.h  FibonacciResult.h  IoTSensor.h
catkin_ws/devel/include/ros_service_assignment/: RectangleAreaService.h  RectangleAreaServiceRequest.h  RectangleAreaServiceResponse.h
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  catkin_tools_prebuild.pc  motion_tutorial.pc  ros_essentials_cpp.pc  ros_service_assignment.pc
catkin_ws/devel/lib/ros_essentials_cpp/: add_two_ints_client  add_two_ints_server  image_pub_sub_cpp  listener_node  open_copy_cpp  read_video_cpp  scan_subscriber_cpp  talker_node  turtlesim_clean_node
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig-version.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
catkin_ws/devel/share/gennodejs/ros/ros_essentials_cpp/: _index.js
catkin_ws/devel/share/motion_tutorial/cmake/: motion_tutorialConfig-version.cmake  motion_tutorialConfig.cmake
catkin_ws/devel/share/ros_essentials_cpp/cmake/: ros_essentials_cpp-msg-extras.cmake  ros_essentials_cpp-msg-paths.cmake  ros_essentials_cppConfig-version.cmake  ros_essentials_cppConfig.cmake
catkin_ws/devel/share/ros_essentials_cpp/msg/: FibonacciAction.msg  FibonacciActionFeedback.msg  FibonacciActionGoal.msg  FibonacciActionResult.msg  FibonacciFeedback.msg  FibonacciGoal.msg  FibonacciResult.msg
catkin_ws/devel/share/ros_service_assignment/cmake/: ros_service_assignment-msg-extras.cmake  ros_service_assignment-msg-paths.cmake  ros_service_assignmentConfig-version.cmake  ros_service_assignmentConfig.cmake
catkin_ws/logs/ros_essentials_cpp/: build.cmake.000.log.stderr
catkin_ws/logs/ros_service_assignment/: build.cmake.000.log.stderr
catkin_ws/src/motion_tutorial/: CMakeLists.txt  package.xml
catkin_ws/src/motion_tutorial/src/: move_straight.py  move_to_goal.py
catkin_ws/src/ros_service_assignment/: CMakeLists.txt
catkin_ws/src/ros_service_assignment/src/: rectangle_area_client.py  rectangle_area_service.py
catkin_ws/src/ros_service_assignment/srv/: RectangleAreaService.srv
cmake_tutorial/: CMakeLists.txt  README.md  main.cpp
cmake_tutorial/ToDoCore/: CMakeLists.txt  ToDo.cpp  ToDo.hpp
cmake_tutorial/ToDoCore/unit_test/: CMakeLists.txt  ToDoTest.cpp
cpp-tutorial/: .gitignore  a.out  main  main.cpp  util_funcs.h
cpp-tutorial/Chapter Notes/: chapters_10_13.cpp  chapters_1_4.cpp  chapters_5_6.cpp  chapters_7_9.cpp
react-tutorial/react-rmdb/: .env  README.md  package-lock.json
react-tutorial/react-rmdb/src/: API.js  App.js  GlobalStyle.js  index.js
react-tutorial/react-rmdb/src/app_stages/: App.js  App0.js  App1.js  README.md
react-tutorial/react-rmdb/src/components/: Home.js
react-tutorial/react-rmdb/src/components/Grid/: Grid.styles.js  index.js
react-tutorial/react-rmdb/src/components/Header/: Header.styles.js  index.js
react-tutorial/react-rmdb/src/components/HeroImage/: HeroImage.styles.js  index.js
react-tutorial/react-rmdb/src/components/Spinner/: Spinner.styles.js
react-tutorial/react-rmdb/src/components/Thumb/: Thumb.styles.js  index.js
react-tutorial/react-rmdb/src/hooks/: useHomeFetch.js
(+95 files in other folders)
